cmake_minimum_required(VERSION 3.15)
project(Udemy_C_)

set(CMAKE_CXX_STANDARD 14)

add_executable(Udemy_C_ main.cpp "Segment 6/Vectors.cpp" "Statement And Operators/StatementAndOperators.cpp" "Controlling Program Flow/ProgramFlow.cpp" "Characters And Strings/CharactersAndStrings.cpp" Functions/Functions.cpp Functions/FunctionParameters.cpp Functions/OverloadingFunctions.cpp Functions/ScopeRules.cpp Functions/RecursiveFunctions.cpp)